# balise

./: .env.example  .fallowrc.json  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  README.md  REVIEW.md  components.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts
.github/workflows/: lint-pr-title.yml  release-please.yml  release.yml  test.yml  warm-cache.yml
docs/rewrite/: 00-foundation.md  01-tags.md  02-notes.md  03-desks.md  04-journal.md  05-tasks.md  06-graph.md  07-settings.md  08-app-shell.md  09-cutover.md  README.md
messages/: de.json  en.json  es.json  fr.json
project.inlang/: settings.json
src/: app.html  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  sync.rs
src-tauri/src/commands/: attachments.rs  device.rs  file_sync.rs  fonts.rs  mod.rs  sync_fs.rs
src-tauri/src/mcp/: mod.rs  server.rs
src-tauri/src/sync/: commands.rs  desk_db.rs  extract.rs  fs_sync.rs  manifest.rs  migrations.rs  mod.rs  note_file.rs  paths.rs  protocol.rs  reconcile.rs  timestamps.rs  transport.rs
src/lib/: index.ts  utils.ts
src/lib/config/: sync.ts  (+1 more)
src/routes/: +layout.svelte  +page.svelte  layout.css  serenity.css
static/news/: 0.16.0.md  0.17.0.md  0.18.0.md  0.19.0.md  0.19.2.md  0.22.0.md  0.23.0.md  0.24.0.md  0.25.0.md  0.28.0.md  0.30.0.md  0.31.0.md  0.34.0.md  0.35.0.md  0.36.0.md  0.37.0.md  0.38.0.md  0.39.0.md  _news.md
(+477 files in other folders)
