[package]
name = "app"
version = "0.27.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
data-encoding = "2"
blake3 = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
regex = "1"
chrono = "0.4"
ed25519-dalek = "2"
getrandom = "0.2"
iroh = "0.98"
tokio = { version = "1", features = ["sync", "time", "macros"] }
tauri = { version = "2.11.1", features = [ "tray-icon" ] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
window-vibrancy = "0.5"

[target.'cfg(target_os = "android")'.dependencies]
libsqlite3-sys = { version = "*", features = ["bundled"] }
